--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
         <title>animal-mashup</title>
+
+<meta property="title" content="animal mashup">
+<meta property="og:title" content="animal mashup">
+<meta property="og:description" content="Animal Mashup is a wonderful application that allows you to create your own new animals by connecting animal parts. The animals you create can be photographed or printed out on a 3D printer, and there are many other ways to play with them.">
+<meta property="og:type" content="website">
+<meta property="twitter:card" content="summary_large_image">
+<meta property="og:image" content="https://oggata.github.io/animalmashup/image/og.png">
+<meta property="twitter:image" content="https://oggata.github.io/animalmashup/image/og.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 
         <!-- Babylon.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.2/dat.gui.min.js"></script>
