--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@ var createScene = async function () {
   HeaderPanel.heightInPixels = 120;
   HeaderPanel.isVertical = false;
   panel.addControl(HeaderPanel);
-  var logo = new BABYLON.GUI.Image("logo", "./image/logo.png?22a");
-  logo.widthInPixels = 200;
+  var logo = new BABYLON.GUI.Image("logo", "./image/logo2.png?bb");
+  logo.widthInPixels = 280;
   logo.heightInPixels = 120;
   logo.verticalAlignment = BABYLON.GUI.Control.VERTICAL_ALIGNMENT_TOP;
   logo.horizontalAlignment = BABYLON.GUI.Control.HORIZONTAL_ALIGNMENT_LEFT;
