--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ var createDefaultEngine = function () {
   });
 };
 //パーツを配列に列挙しておく
-var PartsBody = ['parts_body_a1_llama', 'parts_body_a2_bird', 'parts_body_a3_penguin', 'parts_body_a4_gorilla', 'parts_body_a5_lizard', 'parts_body_a6_snake', 'parts_body_a7_shark', 'parts_body_a8_pig', 'parts_body_a9_crocodile']
-var PartsHead = ['parts_head_b1_ostrich', 'parts_head_b2_squirrel', 'parts_head_b3_bear', 'parts_head_b4_bird', 'parts_head_b5_pengin', 'parts_head_b6_shark', 'parts_head_b7_crocodile', 'parts_head_b8_elephant','parts_head_b10_horse','parts_head_b11_rabbit','parts_head_b12_lion','parts_head_b13_goat']
-var PartsEar = ['parts_ear_c1_goat', 'parts_ear_c2_dog', 'parts_ear_c3_goat', 'parts_ear_c4_bear', 'parts_ear_c5_rabbit', 'parts_ear_c6_chicken','parts_ear_c7_elephant','parts_ear_c8_dog','parts_ear_c10_beetle']
-var PartsLeg = ['parts_leg_d1_duck', 'parts_leg_d2_cat', 'parts_leg_d3_camereon', 'parts_leg_d4_bear', 'parts_leg_d5_house', 'parts_leg_d6_octopus', 'parts_leg_d7_ostrich', 'parts_leg_d8_elephant']
+var PartsBody = ['parts_body_a1_llama', 'parts_body_a2_bird', 'parts_body_a3_penguin', 'parts_body_a4_gorilla', 'parts_body_a5_lizard', 'parts_body_a6_snake', 'parts_body_a7_shark', 'parts_body_a8_pig', 'parts_body_a9_crocodile','parts_body_a10_rat','parts_body_a11_goat']
+var PartsHead = ['parts_head_b1_ostrich', 'parts_head_b2_squirrel', 'parts_head_b3_bear', 'parts_head_b4_bird', 'parts_head_b5_pengin', 'parts_head_b6_shark', 'parts_head_b7_crocodile', 'parts_head_b8_elephant','parts_head_b10_horse','parts_head_b11_rabbit','parts_head_b12_lion','parts_head_b13_goat','parts_head_b13_frog','parts_head_b14_fox']
+var PartsEar = ['parts_ear_c1_goat', 'parts_ear_c2_dog', 'parts_ear_c3_goat', 'parts_ear_c4_bear', 'parts_ear_c5_rabbit', 'parts_ear_c6_chicken','parts_ear_c7_elephant','parts_ear_c8_dog','parts_ear_c10_beetle','parts_ear_c12_goat']
+var PartsLeg = ['parts_leg_d1_duck', 'parts_leg_d2_cat', 'parts_leg_d3_camereon', 'parts_leg_d4_bear', 'parts_leg_d5_house', 'parts_leg_d6_octopus', 'parts_leg_d7_ostrich', 'parts_leg_d8_elephant','parts_leg_d10_bird','parts_leg_d11_frog','parts_leg_d12_gorilla','parts_leg_d13_goldsnake']
 var PartsTail = ['parts_tail_e1_cat', 'parts_tail_e2_whale', 'parts_tail_e3_raccoon', 'parts_tail_e4_lion', 'parts_tail_e5_dinosaur','parts_tail_e7_pig']
 var PartsOption = ['parts_option_f1_stagbeetle', 'parts_option_f2_squid', 'parts_option_f3_turtle', 'parts_option_f4_bird', 'parts_option_f5_cylinder', 'parts_option_f6_ball' ,'parts_option_f7_triangular']
 //全部pushした配列を作っておく
