--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var buttonIcons = [];
 var buttonIsVisible = false;
 //パーツを配列に列挙しておく
 var PartsBody = ['parts_body_a1_llama', 'parts_body_a2_bird', 'parts_body_a3_penguin', 'parts_body_a4_gorilla', 'parts_body_a5_lizard', 'parts_body_a6_snake', 'parts_body_a7_shark', 'parts_body_a8_pig', 'parts_body_a9_crocodile', 'parts_body_a10_rat', 'parts_body_a11_goat']
-var PartsHead = ['parts_head_b1_ostrich', 'parts_head_b3_bear', 'parts_head_b5_pengin', 'parts_head_b6_shark', 'parts_head_b7_crocodile', 'parts_head_b8_elephant', 'parts_head_b10_horse', 'parts_head_b11_rabbit', 'parts_head_b12_lion', 'parts_head_b13_goat', 'parts_head_b13_frog', 'parts_head_b14_fox']
+var PartsHead = ['parts_head_b1_ostrich', 'parts_head_b3_bear', 'parts_head_b5_pengin', 'parts_head_b6_shark', 'parts_head_b7_crocodile', 'parts_head_b8_elephant', 'parts_head_b10_horse', 'parts_head_b12_lion', 'parts_head_b13_goat', 'parts_head_b13_frog', 'parts_head_b14_fox']
 var PartsEar = ['parts_ear_c1_goat', 'parts_ear_c2_dog', 'parts_ear_c3_goat', 'parts_ear_c4_bear', 'parts_ear_c5_rabbit', 'parts_ear_c6_chicken', 'parts_ear_c7_elephant', 'parts_ear_c8_dog', 'parts_ear_c12_goat']
 var PartsLeg = ['parts_leg_d1_duck', 'parts_leg_d2_cat', 'parts_leg_d3_camereon', 'parts_leg_d4_bear', 'parts_leg_d5_house', 'parts_leg_d6_octopus', 'parts_leg_d7_ostrich', 'parts_leg_d8_elephant', 'parts_leg_d10_bird', 'parts_leg_d11_frog', 'parts_leg_d12_gorilla', 'parts_leg_d13_goldsnake']
 var PartsTail = ['parts_tail_e1_cat', 'parts_tail_e2_whale', 'parts_tail_e3_raccoon', 'parts_tail_e4_lion', 'parts_tail_e5_dinosaur', 'parts_tail_e7_pig','parts_tail_e8_bird']
@@ -189,7 +189,7 @@ var mGizmo;
 var EditTypeNumber = 1;
 var ButtonSizeW = 80;
 var AnimalPartsButtonWidth = 75;
-var Version = "v00024";
+var Version = "v00025";
 var SwitchGizmo = function () {
   if (EditTypeNumber == 1) {
     sGizmo.attachedMesh = null;
@@ -328,7 +328,7 @@ var createScene = async function () {
     }
   });
 
-
+  /*
   HeaderPanel.addControl(tokenSpacer5);
   var HeaderMeshconnectButton = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/merge.png?" + Version);
   HeaderMeshconnectButton.color = "transparent"
@@ -339,6 +339,7 @@ var createScene = async function () {
     const combined = BABYLON.Mesh.MergeMeshes(scene.meshes, true, true)
     AddParts(combined);
   });
+  */
   HeaderPanel.addControl(tokenSpacer6);
   var HeaderScreenshotButton = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/screenshot.png?" + Version);
   HeaderScreenshotButton.color = "transparent"
@@ -374,6 +375,8 @@ var createScene = async function () {
     for (var i = 0; i < PartsArray.length; i++) {
       PartsArray[i].dispose();
     }
+    //配列をリセット
+    PartsArray=[];
   });
 
   /////////////////////////////////アイテム表示用パネル
@@ -752,7 +755,8 @@ var createScene = async function () {
     SwitchGizmo();
   });
   var ToolButtonWidth2 = ToolButtonWidth;
-  var buttonX1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
+  //var buttonX1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
+  var buttonX1 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus2.png?" + Version);
   buttonX1.widthInPixels = ToolButtonWidth2;
   buttonX1.heightInPixels = ToolButtonWidth2;
   //button1
@@ -762,10 +766,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.x -= 5;
+      pickedMesh.position.x -= 1;
     }
   });
-  var buttonX2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
+  var buttonX2 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus.png?" + Version);
+  //var buttonX2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
   buttonX2.widthInPixels = ToolButtonWidth2;
   buttonX2.heightInPixels = ToolButtonWidth2;
   //button1
@@ -775,10 +780,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.x -= 1;
+      pickedMesh.position.x -= 0.4;
     }
   });
-  var buttonX3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
+  var buttonX3 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus.png?" + Version);
+  //var buttonX3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
   buttonX3.widthInPixels = ToolButtonWidth2;
   buttonX3.heightInPixels = ToolButtonWidth2;
   //button1
@@ -788,10 +794,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.x += 1;
+      pickedMesh.position.x += 0.4;
     }
   });
-  var buttonX4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
+  var buttonX4 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus2.png?" + Version);
+  //var buttonX4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
   buttonX4.widthInPixels = ToolButtonWidth2;
   buttonX4.heightInPixels = ToolButtonWidth2;
   //button1
@@ -801,10 +808,12 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.x += 5;
+      pickedMesh.position.x += 1;
     }
   });
-  var buttonY1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
+
+  var buttonY1 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus2.png?" + Version);
+  //var buttonY1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
   buttonY1.widthInPixels = ToolButtonWidth2;
   buttonY1.heightInPixels = ToolButtonWidth2;
   //button1
@@ -814,10 +823,12 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.z -= 5;
+      pickedMesh.position.z -= 1;
     }
   });
-  var buttonY2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
+
+  var buttonY2 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus.png?" + Version);
+  //var buttonY2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
   buttonY2.widthInPixels = ToolButtonWidth2;
   buttonY2.heightInPixels = ToolButtonWidth2;
   //button1
@@ -827,10 +838,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.z -= 1;
+      pickedMesh.position.z -= 0.4;
     }
   });
-  var buttonY3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
+  var buttonY3 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus.png?" + Version);
+  //var buttonY3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
   buttonY3.widthInPixels = ToolButtonWidth2;
   buttonY3.heightInPixels = ToolButtonWidth2;
   //button1
@@ -840,10 +852,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.z += 1;
+      pickedMesh.position.z += 0.4;
     }
   });
-  var buttonY4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
+  var buttonY4 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus2.png?" + Version);
+  //var buttonY4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
   buttonY4.widthInPixels = ToolButtonWidth2;
   buttonY4.heightInPixels = ToolButtonWidth2;
   //button1
@@ -853,10 +866,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.z += 5;
+      pickedMesh.position.z += 1;
     }
   });
-  var buttonZ1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
+  var buttonZ1 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus2.png?" + Version);
+  //var buttonZ1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
   buttonZ1.widthInPixels = ToolButtonWidth2;
   buttonZ1.heightInPixels = ToolButtonWidth2;
   //button1
@@ -866,10 +880,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.y -= 5;
+      pickedMesh.position.y -= 1;
     }
   });
-  var buttonZ2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
+  var buttonZ2 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus.png?" + Version);
+  //var buttonZ2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
   buttonZ2.widthInPixels = ToolButtonWidth2;
   buttonZ2.heightInPixels = ToolButtonWidth2;
   //button1
@@ -879,10 +894,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.y -= 1;
+      pickedMesh.position.y -= 0.4;
     }
   });
-  var buttonZ3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
+  var buttonZ3 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus.png?" + Version);
+  //var buttonZ3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
   buttonZ3.widthInPixels = ToolButtonWidth2;
   buttonZ3.heightInPixels = ToolButtonWidth2;
   //button1
@@ -892,10 +908,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.y += 1;
+      pickedMesh.position.y += 0.4;
     }
   });
-  var buttonZ4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
+  var buttonZ4 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus2.png?" + Version);
+  //var buttonZ4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
   buttonZ4.widthInPixels = ToolButtonWidth2;
   buttonZ4.heightInPixels = ToolButtonWidth2;
   //button1
@@ -905,10 +922,11 @@ var createScene = async function () {
     EditTypeNumber = 1;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.position.y += 5;
+      pickedMesh.position.y += 1;
     }
   });
-  var buttonScale1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
+  var buttonScale1 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus2.png?" + Version);
+  //var buttonScale1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
   buttonScale1.widthInPixels = ToolButtonWidth2;
   buttonScale1.heightInPixels = ToolButtonWidth2;
   //button1
@@ -923,7 +941,8 @@ var createScene = async function () {
       pickedMesh.scaling.z -= 0.1;
     }
   });
-  var buttonScale2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
+  var buttonScale2 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus.png?" + Version);
+  //var buttonScale2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
   buttonScale2.widthInPixels = ToolButtonWidth2;
   buttonScale2.heightInPixels = ToolButtonWidth2;
   //button1
@@ -938,7 +957,8 @@ var createScene = async function () {
       pickedMesh.scaling.z -= 0.01;
     }
   });
-  var buttonScale3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
+  var buttonScale3 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus.png?" + Version);
+  //var buttonScale3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
   buttonScale3.widthInPixels = ToolButtonWidth2;
   buttonScale3.heightInPixels = ToolButtonWidth2;
   //button1
@@ -953,7 +973,8 @@ var createScene = async function () {
       pickedMesh.scaling.z += 0.01;
     }
   });
-  var buttonScale4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
+  var buttonScale4 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus2.png?" + Version);
+  //var buttonScale4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
   buttonScale4.widthInPixels = ToolButtonWidth2;
   buttonScale4.heightInPixels = ToolButtonWidth2;
   //button1
@@ -968,7 +989,8 @@ var createScene = async function () {
       pickedMesh.scaling.z += 0.1;
     }
   });
-  var buttonRotateX1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
+  var buttonRotateX1 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus2.png?" + Version);
+  //var buttonRotateX1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
   buttonRotateX1.widthInPixels = ToolButtonWidth2;
   buttonRotateX1.heightInPixels = ToolButtonWidth2;
   //button1
@@ -978,10 +1000,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.x -= 10;
+      pickedMesh.rotation.x -= 0.1;
     }
   });
-  var buttonRotateX2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
+  var buttonRotateX2 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus.png?" + Version);
+  //var buttonRotateX2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
   buttonRotateX2.widthInPixels = ToolButtonWidth2;
   buttonRotateX2.heightInPixels = ToolButtonWidth2;
   //button1
@@ -991,10 +1014,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.x -= 5;
+      pickedMesh.rotation.x -= 0.05;
     }
   });
-  var buttonRotateX3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
+  var buttonRotateX3 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus.png?" + Version);
+  //var buttonRotateX3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
   buttonRotateX3.widthInPixels = ToolButtonWidth2;
   buttonRotateX3.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1004,11 +1028,12 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.x += 5;
+      pickedMesh.rotation.x += 0.05;
     }
     console.log("you did it!");
   });
-  var buttonRotateX4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
+  var buttonRotateX4 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus2.png?" + Version);
+  //var buttonRotateX4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
   buttonRotateX4.widthInPixels = ToolButtonWidth2;
   buttonRotateX4.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1018,10 +1043,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.x += 10;
+      pickedMesh.rotation.x += 0.1;
     }
   });
-  var buttonRotateY1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
+  var buttonRotateY1 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus2.png?" + Version);
+  //var buttonRotateY1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
   buttonRotateY1.widthInPixels = ToolButtonWidth2;
   buttonRotateY1.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1031,10 +1057,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.z -= 5;
+      pickedMesh.rotation.z -= 0.1;
     }
   });
-  var buttonRotateY2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
+  var buttonRotateY2 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus.png?" + Version);
+  //var buttonRotateY2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
   buttonRotateY2.widthInPixels = ToolButtonWidth2;
   buttonRotateY2.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1044,10 +1071,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.z -= 1;
+      pickedMesh.rotation.z -= 0.05;
     }
   });
-  var buttonRotateY3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
+  var buttonRotateY3 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus.png?" + Version);
+  //var buttonRotateY3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
   buttonRotateY3.widthInPixels = ToolButtonWidth2;
   buttonRotateY3.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1057,10 +1085,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.z += 1;
+      pickedMesh.rotation.z += 0.05;
     }
   });
-  var buttonRotateY4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
+  var buttonRotateY4 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus2.png?" + Version);
+  //var buttonRotateY4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
   buttonRotateY4.widthInPixels = ToolButtonWidth2;
   buttonRotateY4.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1070,10 +1099,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.x += 5;
+      pickedMesh.rotation.x += 0.1;
     }
   });
-  var buttonRotateZ1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
+  var buttonRotateZ1 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus2.png?" + Version);
+  //var buttonRotateZ1 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-5");
   buttonRotateZ1.widthInPixels = ToolButtonWidth2;
   buttonRotateZ1.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1083,10 +1113,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.y -= 5;
+      pickedMesh.rotation.y -= 0.1;
     }
   });
-  var buttonRotateZ2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
+  var buttonRotateZ2 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/minus.png?" + Version);
+  //var buttonRotateZ2 = BABYLON.GUI.Button.CreateSimpleButton("but1", "-1");
   buttonRotateZ2.widthInPixels = ToolButtonWidth2;
   buttonRotateZ2.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1096,10 +1127,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.y -= 1;
+      pickedMesh.rotation.y -= 0.05;
     }
   });
-  var buttonRotateZ3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
+  var buttonRotateZ3 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus.png?" + Version);
+  //var buttonRotateZ3 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+1");
   buttonRotateZ3.widthInPixels = ToolButtonWidth2;
   buttonRotateZ3.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1109,10 +1141,11 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.y += 1;
+      pickedMesh.rotation.y += 0.05;
     }
   });
-  var buttonRotateZ4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
+  var buttonRotateZ4 = BABYLON.GUI.Button.CreateImageOnlyButton("aaa", "./image/button/plus2.png?" + Version);
+  //var buttonRotateZ4 = BABYLON.GUI.Button.CreateSimpleButton("but1", "+5");
   buttonRotateZ4.widthInPixels = ToolButtonWidth2;
   buttonRotateZ4.heightInPixels = ToolButtonWidth2;
   //button1
@@ -1122,7 +1155,7 @@ var createScene = async function () {
     EditTypeNumber = 3;
     SwitchGizmo();
     if (pickedMesh) {
-      pickedMesh.rotation.y += 5;
+      pickedMesh.rotation.y += 0.1;
     }
   });
   //パーツ用のパネル
